# cpp-state-machine-framework

./: LICENSE
cpp-state-machine-framework/: StateMachine.h
cpp-state-machine-framework/actions/: Maybe.h  Nothing.h  TransitionTo.h  utils.h
cpp-state-machine-framework/types/: utils.h
cpp-state-machine-framework/utils/: StaticString.h  tuple.h  tuple_type_id_extractor.h
tests/: CMakeLists.txt  Door.h  example.cpp  logger.h  transition_table.cpp
